# hello-world-apk-

./: .gitignore  README.md  gradlew  proguard-rules.pro  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/carbit/inappkeyboard/: ImeCommonWordsPinyinTest.java  InputCorpusStressTest.java  KeyboardEngineInstrumentedTest.java  KeyboardEngineInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/pinyinime/: CMakeLists.txt
app/src/main/java/com/carbit/inappkeyboard/: MainActivity.java  MainActivity.kt  NoImeWebView.java  VirtualScreenPresentation.java  VirtualScreenPresentation.kt  WebViewCommitTarget.java
app/src/main/java/com/example/helloworld/: AskXmlKeyboardParser.kt  InAppKeyboardView.kt  MainActivity.kt  PinyinDecoder.kt  VirtualScreenPresentation.kt
app/src/main/res/layout/: activity_main.xml  candidate_bar.xml
app/src/main/res/raw/: ime_common_words_1000_plain.txt
keyboard/: build.gradle  consumer-rules.pro
keyboard/src/androidTest/java/com/carbit/inappkeyboard/keyboard/: PinyinDecoderInstrumentedTest.java  PinyinNativeApiInstrumentedTest.java
keyboard/src/main/cpp/pinyinime/: CMakeLists.txt  pinyin_jni.cpp
keyboard/src/main/cpp/pinyinime/share/: matrixsearch.cpp  userdict.cpp
keyboard/src/main/java/com/carbit/inappkeyboard/keyboard/: AskXmlKeyboardParser.java  AskXmlKeyboardParser.kt  CandidateBarView.java  CandidateBarView.kt  EditTextCommitTarget.java  ICandidateBar.java  IPinyinDecoder.java  ITextCommitTarget.java  InAppKeyboardPanelView.java  InAppKeyboardPanelView.kt  InAppKeyboardView.java  InAppKeyboardView.kt  PinyinDecoder.java  PinyinDecoder.kt  (+2 more)
keyboard/src/main/java/com/example/keyboard/: AskXmlKeyboardParser.kt  CandidateBarView.kt  InAppKeyboardView.kt  PinyinDecoder.kt  PinyinImeSession.kt
keyboard/src/main/res/values/: attrs.xml  ids.xml
keyboard/src/test/java/com/example/keyboard/: PinyinImeSessionTest.kt
tools/: full_traverse.py
(+2 files in other folders)
